--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Sass Practice</title>
 </head>
 <body>
-    
+    <header>
+        <h1>hello</h1>
+        
+    </header>
+    <button>button</button>
 </body>
 </html>
