--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     <header>
-        <h1>hello</h1>
-        
+        <h1>hello my dear</h1>
+        <button>Hello</button>
     </header>
-    <button>button</button>
+    <div class="contact">
+        <button>Submit</button>
+        <div class="info">
+            <h1>Our contact info</h1>
+            <p>This is our info</p>
+        </div>
+    </div>
 </body>
 </html>
